# C8ML7_subwaydelay

./: .gitignore  README.md  RandomForestRegression.ipynb  SETUP.md  Untitled-1.ipynb  dataexploration.ipynb  dataexplorationedits.ipynb  pyproject.toml
data/: README.md
data/master/: ttc_delay_code_description.csv  ttc_subway_station_master.csv
data/processed/: mapping_ttc_delay_code.csv  mapping_ttc_station.csv  ttc_subway_delay_data_obt.csv
data/raw/: TTC Subway Delay Data since 2025.csv  ttc_delay_outliers_cleaning.ipynb
data/raw/csv/: ttc-subway-delay-data-2014.csv  ttc-subway-delay-data-2017.csv
data/raw/csv/toronto_weather_data/: 2014_1.csv  2014_10.csv  2014_11.csv  2014_12.csv  2014_2.csv  2014_3.csv  2014_4.csv  2014_5.csv  2014_6.csv  2014_7.csv  2014_8.csv  2014_9.csv  2015_1.csv  2015_10.csv  2015_11.csv  2015_12.csv  2015_2.csv  2015_3.csv  2015_4.csv  2015_5.csv  2015_6.csv  2015_7.csv  2015_8.csv  2015_9.csv  2016_1.csv  2016_10.csv  2016_11.csv  2016_12.csv  2016_2.csv  2016_3.csv  2016_4.csv  2016_5.csv  2016_6.csv  2016_7.csv  2016_8.csv  2016_9.csv  2017_1.csv  2017_10.csv  2017_11.csv  2017_12.csv  (+116 more)
data/raw/csv/ttc_subway_delay/: ttc-subway-delay-data-2015.csv  ttc-subway-delay-data-2016.csv  ttc-subway-delay-data-2020.csv  ttc-subway-delay-data-2021.csv  ttc-subway-delay-data-2025.csv  ttc-subway-delay-data-2026.csv
include/: helper_functions.py
model/: README.md  RandomForest.ipynb  XGboost hemant.ipynb  XGboost.ipynb
scripts/: data_prepration.ipynb  dataexploration.ipynb  dataexploration_safa.ipynb
