[project]
name = "c8ml7-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.0.0",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "lxml>=6.0.2",
    "thefuzz>=0.22.1",
    "xgboost==2.1.4",
    "shap==0.47.2"
]